add user profile and unit test
